Bug 618006 - Make the IME event state manager determine editability of a content node by its read/write state; r=bsbarsky a=blocking-fennecb3+